# legilimens

./: .gitignore  CMakeLists.txt  dockwidgetmanager.cpp  dockwidgetmanager.h  mainwindow.cpp  mainwindow.h
src/common/: basewidgetmanager.cpp  basewidgetmanager.h
src/controller/: controller.cpp  controller.h
src/model/: mediafilemanager.cpp  mediafilemanager.h  mediaparserthread.cpp  mediaparserthread.h  model.cpp  model.h  sliceprocessor.cpp  sliceprocessor.h  slicetreemodel.cpp  slicetreemodel.h  streamtreemodel.cpp  streamtreemodel.h
src/view/: mainwindow.cpp  mainwindow.h
src/view/widgets/: hexwidgetmanager.cpp  hexwidgetmanager.h  macroblockwidgetmanager.cpp  macroblockwidgetmanager.h  sequencewidgetmanager.cpp  sequencewidgetmanager.h  slicewidgetmanager.cpp  slicewidgetmanager.h  streamswidgetmanager.cpp  streamswidgetmanager.h
